--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <title>gift</title>
 </head>
 <body style="margin:0;">
-  <img src="Omniscient Reader.jpg" style="width:100%;height:auto;">
+  <img src="IMG_0765.jpg" style="width:100%;height:auto;">
 </body>
 </html>
 
